# capture_an

./: CMakeLists.txt  main.cpp  tensorProc.cu  yolov8face.cpp
include/: tensorProc.cuh  yolov8face.h
